--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "portfolio-website",
-  "version": "1.0.0",
-  "description": "Alex Eisenach's Portfolio Website",
-  "main": "index.js",
-  "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd server && npm run dev",
-    "client": "cd client && npm run dev",
-    "install-all": "npm install && cd client && npm install && cd ../server && npm install"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  }
+    "name": "portfolio-website",
+    "version": "1.0.0",
+    "description": "Alex Eisenach's Portfolio Website",
+    "main": "index.js",
+    "scripts": {
+        "start": "concurrently \"npm run server\" \"npm run client\"",
+        "build": "npm run install-all && npm run build-client",
+        "build-client": "cd client && npm run build",
+        "server": "cd server && npm run dev",
+        "client": "cd client && npm run dev",
+        "install-all": "npm install --include=dev && cd client && npm install --include=dev && cd ../server && npm install --include=dev"
+    },
+    "devDependencies": {
+        "concurrently": "^8.2.2"
+    }
 }
